correct mistake partners page

--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -41,7 +41,7 @@
         <%= image_tag "account.svg", class: "action-image", alt: "icon image create partner account svg" %>
         <div class="quote">Inscription</div>
         <div class="step-text">
-          Remplissez en moins d'une minute <br><%= link_to "le formulaire", inscription_pro_path %> qui nous permettra de créér votre compte
+          Remplissez en moins d'une minute <br><%= link_to "le formulaire", inscription_pro_path %> qui nous permettra de créer votre compte
         </div>
       </div>
       <div class="icon-and-text-no-shaddow" id="second">
