--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -38,24 +38,24 @@
     </h3>
     <div class="steps">
       <div class="icon-and-text-no-shaddow" id="first">
-        <%= image_tag "account.svg", class: "action-image", alt: "icon image create partner account svg" %>
-        <div class="quote">Inscription</div>
-        <div class="step-text">
-          Remplissez en moins d'une minute <br><%= link_to "le formulaire", inscription_pro_path %> qui nous permettra de créer votre compte
-        </div>
-      </div>
-      <div class="icon-and-text-no-shaddow" id="second">
         <%= image_tag "launch.svg", class: "action-image", alt: "icon image launch campaign svg" %>
         <div class="quote">Campagne</div>
         <div class="step-text">
           Lancez une campagne en présentant le produit pour lequel vous souhaitez proposer une promo
         </div>
       </div>
+      <div class="icon-and-text-no-shaddow" id="second">
+        <%= image_tag "determine.svg", class: "action-image", alt: "icon image think svg" %>
+        <div class="quote">Enquête</div>
+        <div class="step-text">
+          Les testeurs  déterminent le prix maximal qu'ils sont prêts à payer pour acquérir le produit dès maintenant
+        </div>
+      </div>
       <div class="icon-and-text-no-shaddow" id="third">
         <%= image_tag "collect.svg", class: "action-image", alt: "icon image collect svg" %>
         <div class="quote">Collecte</div>
         <div class="step-text">
-          Nous collectons pendant 7 jours les propositions des testeurs intéressés par votre produit
+          Nous collectons pendant 7 jours toutes les propositions d'achat  des testeurs intéressés par votre produit
         </div>
       </div>
     </div>
@@ -68,14 +68,14 @@
           <%= image_tag "dashboard.svg", class: "action-image", alt: "icon image  dashboard analyse svg" %>
           <div class="quote-orange">Analyse</div>
           <div class="step-text">
-            Nous vous fournissons les données et les analyses relatives à la campagne
+            Nous vous fournissons une analyse des données de la campagne
           </div>
         </div>
         <div class="icon-and-text-no-shaddow" id="fifth">
           <%= image_tag "win.svg", class: "action-image", alt: "icon image win svg" %>
           <div class="quote-orange">Décision</div>
           <div class="step-text">
-            Grace aux analyses, décidez du prix qui vous permet d'atteindre l'objectif souhaité
+            L'analyse vous aide à déterminer le prix qui permet d'atteindre l'objectif souhaité
           </div>
         </div>
         <div class="icon-and-text-no-shaddow" id="sixth">
