--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -18,9 +18,9 @@
       </div>
     </header>
     <div class="banner-container">
-      <div class="banner-content" id="banner-content-partners">
-        <h1>Le prix d'une promo ne s'invente pas, il se découvre.</h1>
-        <p class="concept">Acquisition, fidélisation, déstockage, volumes, CA, marge… Sur Pickalgo découvrez quel prix permettra à votre promo d'atteindre l'objectif que vous vous êtes fixé.
+      <div class="banner-content">
+        <h1 id="typer">Acquisition</h1>
+        <p class="concept">Le prix d'une promo ne s'invente pas, il se découvre. Sur Pickalgo découvrez quel prix permettra à votre promo d'atteindre l'objectif que vous vous êtes fixé.
         </p>
         <div class="cta-links">
           <a href="#how-it-works">
