change lead animation

--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -19,7 +19,7 @@
     </header>
     <div class="banner-container">
       <div class="banner-content">
-        <h1 id="typer">Acquisition</h1>
+        <h1>Objectif <span id="typer">.</span></h1>
         <p class="concept">Le prix d'une promo ne s'invente pas, il se découvre. Sur Pickalgo découvrez quel prix permettra à votre promo d'atteindre l'objectif que vous vous êtes fixé.
         </p>
         <div class="cta-links">
