save cgv et mentions legales, actualisation date was is white

--- a/app/views/pages/cgu.html.erb
+++ b/app/views/pages/cgu.html.erb
@@ -30,7 +30,7 @@
           <p>
             Pickalgo est propriétaire de l'ensemble des outils nécessaires aux services proposés par la plateforme.
           </p>
-          <i>Actualisées le 08/10/2018</i>
+          <p>Actualisées le 08/10/2018</p>
       </div>
     </div>
   </div>
