--- a/app/views/pages/mentions_legales.html.erb
+++ b/app/views/pages/mentions_legales.html.erb
@@ -27,7 +27,7 @@
               <br>47 rue Rouelle, 75015 Paris.
               <br><a href="mailto:jorge@pickalgo.com">jorge@pickalgo.com</a>
             </p>
-          <i>Actualisées le 15/03/2018</i>
+          <p>Actualisées le 12/10/2018</p>
       </div>
     </div>
   </div>
