correct user show

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -74,7 +74,7 @@
         </div>
         <div class="icon-and-text-no-shaddow" id="fifth">
           <%= image_tag "win.svg", class: "action-image", alt: "icon image win svg" %>
-          <div class="quote-orange">C'est gagné si</div>
+          <div class="quote-orange">C'est gagné :</div>
           <div class="step-text">
             <ul style="padding-left: 0">
               <li>Vous proposiez une promo à 180 €</li>
@@ -85,7 +85,7 @@
         </div>
         <div class="icon-and-text-no-shaddow" id="sixth">
           <%= image_tag "no_win.svg", class: "action-image", alt: "icon image successful purchase svg" %>
-          <div class="quote-orange">Rien de perdu</div>
+          <div class="quote-orange">Rien de perdu :</div>
           <div class="step-text">
             <ul style="padding-left: 0">
               <li>Vous proposiez une promo à 135 €</li>
