--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -26,9 +26,7 @@
           <a href="#how-it-works">
             <div class="btn-white go-to" id="concept">Concept</div>
           </a>
-          <%= link_to inscription_pro_path, class:"btn-orange cta-link" do %>
-            Inscription pro
-          <% end %>
+          <%= link_to "inscription pro", inscription_pro_path, class:"btn-orange cta-link"%>
         </div>
       </div>
     </div>
