change prop value partners

--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -46,14 +46,14 @@
         <%= image_tag "determine.svg", class: "action-image", alt: "icon image think svg" %>
         <div class="quote">Enquête</div>
         <div class="step-text">
-          Les testeurs  déterminent le prix maximal qu'ils sont prêts à payer pour acquérir le produit dès maintenant
+          Chaque acheteur  détermine le prix maximal qu'il est prêt à payer pour acquérir votre produit dès maintenant
         </div>
       </div>
       <div class="icon-and-text-no-shaddow" id="third">
-        <%= image_tag "collect.svg", class: "action-image", alt: "icon image collect svg" %>
-        <div class="quote">Collecte</div>
+        <%= image_tag "dashboard.svg", class: "action-image", alt: "icon image  dashboard analyse svg" %>
+        <div class="quote">Analyse</div>
         <div class="step-text">
-          Nous collectons pendant 7 jours toutes les propositions d'achat concrètes des testeurs intéressés par votre produit
+          Avec notre analyse sachez quels volumes vous allez réaliser en fonction du prix remisé que vous choisirez
         </div>
       </div>
     </div>
@@ -62,25 +62,25 @@
     <div class="how-it-works">
       <h3>Et ensuite ?</h3>
       <div class="steps">
-        <div class="icon-and-text-no-shaddow" id="fourth">
-          <%= image_tag "dashboard.svg", class: "action-image", alt: "icon image  dashboard analyse svg" %>
-          <div class="quote-orange">Analyse</div>
-          <div class="step-text">
-            Nous vous fournissons une analyse des données de la campagne
-          </div>
-        </div>
         <div class="icon-and-text-no-shaddow" id="fifth">
           <%= image_tag "win.svg", class: "action-image", alt: "icon image win svg" %>
-          <div class="quote-orange">Décision</div>
+          <div class="quote-orange">Déterminez...</div>
           <div class="step-text">
-            L'analyse vous aide à déterminer le prix qui permet d'atteindre l'objectif souhaité
+            facilement le prix qui vous permet d'atteindre au mieux l'objectif que vous vous êtes fixé
           </div>
         </div>
         <div class="icon-and-text-no-shaddow" id="sixth">
-          <%= image_tag "order.svg", class: "action-image", alt: "icon image successful order svg" %>
-          <div class="quote-orange">Commandes</div>
+          <%= image_tag "select.svg", class: "action-image", alt: "icon image select successful order svg" %>
+          <div class="quote-orange">Validez...</div>
           <div class="step-text">
-            Validez les commandes de nos testeurs au prix que vous aurez déterminé
+            au prix que vous avez déterminé, les commandes des acheteurs qui proposaient un prix supérieur ou égal à celui-ci
+          </div>
+        </div>
+        <div class="icon-and-text-no-shaddow" id="sixth">
+          <%= image_tag "reject.svg", class: "action-image", alt: "icon image reject svg" %>
+          <div class="quote-orange">Rejetez...</div>
+          <div class="step-text">
+            les propositions des acheteurs qui sont inférieures au prix auquel vous avez décidé de fixer la promo
           </div>
         </div>
       </div>
