change images partners and tester, more harmony

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -66,14 +66,14 @@
       <h3>Comment ça marche ?</h3>
       <div class="steps">
         <div class="icon-and-text-no-shaddow" id="fourth">
-          <%= image_tag "analyze.svg", class: "action-image", alt: "icon image analyse svg" %>
+          <%= image_tag "optimize.svg", class: "action-image", alt: "icon image analyse optimosation svg" %>
           <div class="quote-orange">Nous calculons...</div>
           <div class="step-text">
             la promo qui permet de compenser la meilleure réduction du prix par une augmentation des ventes
           </div>
         </div>
         <div class="icon-and-text-no-shaddow" id="fifth">
-          <%= image_tag "win.svg", class: "action-image", alt: "icon image win svg" %>
+          <%= image_tag "select.svg", class: "action-image", alt: "icon image select successful order svg" %>
           <div class="quote-orange">C'est gagné :</div>
           <div class="step-text">
             <ul style="padding-left: 0">
@@ -84,7 +84,7 @@
           </div>
         </div>
         <div class="icon-and-text-no-shaddow" id="sixth">
-          <%= image_tag "no_win.svg", class: "action-image", alt: "icon image successful purchase svg" %>
+          <%= image_tag "reject.svg", class: "action-image", alt: "icon image reject svg" %>
           <div class="quote-orange">Rien de perdu :</div>
           <div class="step-text">
             <ul style="padding-left: 0">
