--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -20,7 +20,7 @@
     <div class="banner-container">
       <div class="banner-content">
         <h1>Objectif <span id="typer">.</span></h1>
-        <p class="concept">Le prix d'une promo ne s'invente pas, il se découvre. Sur Pickalgo découvrez quel prix permettra à votre promo d'atteindre l'objectif que vous vous êtes fixé.
+        <p class="concept">Le prix d'une promo ne s'invente pas, il se découvre. Sur Pickalgo découvrez et fixez le prix qui permettra à votre promo d'atteindre son objectif.
         </p>
         <div class="cta-links">
           <a href="#how-it-works">
@@ -63,7 +63,7 @@
       <h3>Et ensuite ?</h3>
       <div class="steps">
         <div class="icon-and-text-no-shaddow" id="fifth">
-          <%= image_tag "win.svg", class: "action-image", alt: "icon image win svg" %>
+          <%= image_tag "optimize.svg", class: "action-image", alt: "icon image analyse optimosation svg" %>
           <div class="quote-orange">Déterminez...</div>
           <div class="step-text">
             facilement le prix qui vous permet d'atteindre au mieux l'objectif que vous vous êtes fixé
@@ -73,7 +73,7 @@
           <%= image_tag "select.svg", class: "action-image", alt: "icon image select successful order svg" %>
           <div class="quote-orange">Validez...</div>
           <div class="step-text">
-            au prix que vous avez déterminé, les commandes des acheteurs qui proposaient un prix supérieur ou égal à celui-ci
+            au prix que vous avez déterminé, les commandes des acheteurs qui proposaient un prix supérieur où égal à celui-ci
           </div>
         </div>
         <div class="icon-and-text-no-shaddow" id="sixth">
