change partner text

--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -46,27 +46,27 @@
         <%= image_tag "determine.svg", class: "action-image", alt: "icon image think svg" %>
         <div class="quote">Enquête</div>
         <div class="step-text">
-          Chaque acheteur  détermine le prix maximal qu'il est prêt à payer pour acquérir votre produit dès maintenant
+          Tout acheteur intéressé émet une proposition d'achat du montant maximal qu'il est prêt à payer pour votre produit
         </div>
       </div>
       <div class="icon-and-text-no-shaddow" id="third">
         <%= image_tag "dashboard.svg", class: "action-image", alt: "icon image  dashboard analyse svg" %>
         <div class="quote">Analyse</div>
         <div class="step-text">
-          Avec notre analyse sachez quels volumes vous allez réaliser en fonction du prix remisé que vous choisirez
+          Notre analyse vous présente les volumes que vous allez réaliser en fonction du prix remisé que vous choisirez
         </div>
       </div>
     </div>
   </div>
   <div id="conclusion">
     <div class="how-it-works">
-      <h3>Et ensuite ?</h3>
+      <h3>Fin de la campagne</h3>
       <div class="steps">
         <div class="icon-and-text-no-shaddow" id="fifth">
           <%= image_tag "optimize.svg", class: "action-image", alt: "icon image analyse optimosation svg" %>
           <div class="quote-orange">Déterminez...</div>
           <div class="step-text">
-            facilement le prix qui vous permet d'atteindre au mieux l'objectif que vous vous êtes fixé
+            facilement le prix qui vous permet d'atteindre au mieux l'objectif que vous avez défini
           </div>
         </div>
         <div class="icon-and-text-no-shaddow" id="sixth">
@@ -78,9 +78,9 @@
         </div>
         <div class="icon-and-text-no-shaddow" id="sixth">
           <%= image_tag "reject.svg", class: "action-image", alt: "icon image reject svg" %>
-          <div class="quote-orange">Rejetez...</div>
+          <div class="quote-orange">Déclinez...</div>
           <div class="step-text">
-            les propositions des acheteurs qui sont inférieures au prix auquel vous avez décidé de fixer la promo
+            automatiquement les propositions des acheteurs qui sont inférieures au prix que vous avez déterminé
           </div>
         </div>
       </div>
