save prop value

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -56,7 +56,7 @@
         <%= image_tag "successful_purchase.svg", class: "action-image", alt: "icon image successful purchase svg" %>
         <div class="quote">Profitez...</div>
         <div class="step-text">
-          avant tout le monde du prix promotionnel qui aura été calculé
+          avant tout le monde du meilleur prix promotionnel qui aura été calculé
         </div>
       </div>
     </div>
@@ -90,7 +90,7 @@
             <ul style="padding-left: 0">
               <li>Vous proposiez une promo à 135 €</li>
               <li>La promo est fixée à 140 €</li>
-              <li>Vous ne pouvez pas profiter de la promo</li>
+              <li>Vous ne profitez pas de la promo</li>
             </ul>
           </div>
         </div>
