--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -20,7 +20,7 @@
     <div class="banner-container">
       <div class="banner-content">
         <h1>Objectif <span id="typer">.</span></h1>
-        <p class="concept">Le prix d'une promo ne s'invente pas, il se découvre. Sur Pickalgo découvrez et fixez le prix qui permettra à votre promo d'atteindre son objectif.
+        <p class="concept">Le prix d'une promo ne s'invente pas, il se découvre. Sur Pickalgo découvrez le prix qui permettra à votre promo d'atteindre son objectif de la façon la plus efficiente.
         </p>
         <div class="cta-links">
           <a href="#how-it-works">
@@ -66,7 +66,7 @@
           <%= image_tag "optimize.svg", class: "action-image", alt: "icon image analyse optimosation svg" %>
           <div class="quote-orange">Déterminez...</div>
           <div class="step-text">
-            facilement le prix qui vous permet d'atteindre au mieux l'objectif que vous avez défini
+            facilement le prix qui vous permet d'atteindre avec efficience l'objectif que vous avez défini
           </div>
         </div>
         <div class="icon-and-text-no-shaddow" id="sixth">
