--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -47,7 +47,7 @@
                   <br><span>n°1 sur la liste des 99 problèmes de Jay-Z</span>
                 </h3>
                 <div class="card-faq-answer">
-                  <p>Il peut arriver que l'on souhaite faire bénéficier ses clients d'une promo. L'objectif intermédiaire est toujours le même: augmenter le volume de ses ventes. Les objectifs finaux peuvent en revanche être divers (acquérir de nouveaux clients, déstocker, augmenter ses volumes de production, augmenter sa marge opérationnelle...). Le problème est qu'<b>il est difficile de trouver le meilleur prix promotionnel à fixer</b> qui permettra d'atteindre au mieux l'objectif final fixé.
+                  <p>Il peut arriver que l'on souhaite faire bénéficier ses clients d'une promo. L'objectif intermédiaire est toujours le même: augmenter le volume de ses ventes. Les objectifs finaux peuvent en revanche être divers (acquérir de nouveaux clients, déstocker, augmenter ses volumes de production, augmenter sa marge opérationnelle...). Le problème est qu'<b>il est difficile de trouver le meilleur prix promotionnel à fixer</b> qui permettra d'atteindre l'objectif final fixé de façon efficiente.
                   </p>
                 </div>
               </div>
@@ -62,13 +62,13 @@
                   <br><span>L'atout Pick(algo) à tous vos coeurs</span>
                 </h3>
                 <div class="card-faq-answer">
-                    <ul><b>Pour les testeurs :</b>
+                    <ul><b>Pour vous testeurs :</b>
                       <li>Découvrir de supers produits et services</li>
                       <li>Vous faire bénéficier des meilleures promos avant tout le monde</li>
                     </ul>
-                    <ul><b>Pour les vendeurs :</b>
-                      <li>Récolter du feedback pour améliorer sa stratégie promotionnelle</li>
-                      <li>Augmenter ses volumes de ventes pour diminuer ses coûts de production et de distribution</li>
+                    <ul><b>Pour vous vendeurs :</b>
+                      <li>Vous aider à optimiser le prix de vos promos</li>
+                      <li>Augmenter vos volumes de ventes pour diminuer ses coûts de production et de distribution</li>
                       <li>Gagner en notoriété</li>
                     </ul>
                 </div>
@@ -84,7 +84,7 @@
                   <br><span>C'est pas si sorcier, n'est-ce pas Jamy ?</span>
                 </h3>
                 <div class="card-faq-answer">
-                    <p>Un produit ou service vous plait ? Aidez son vendeur à comprendre quel prix pratiquer pour réussir son opération de promo. Pour cela, c'est simple, dites-nous quel prix maximal vous seriez prêt à payer pour faire l'acquisition du produit dès à présent. Chaque proposition émise par nos testeurs est étudiée pour mesurer son impact sur l'objectif que s'est fixé le vendeur (augmentation des volumes, de la marge…). Nous faisons ensuite bénéficier nos testeurs de la promo optimale qui permet de compenser la meilleure réduction du prix par une augmentation des ventes.</p>
+                    <p>Un produit ou service vous plait ? Aidez son vendeur à comprendre quel prix pratiquer pour réussir son opération de promo. Pour cela, c'est simple, dites-nous quel prix maximal vous seriez prêt à payer pour faire l'acquisition du produit dès à présent. Chaque proposition émise par nos testeurs est étudiée pour mesurer son impact sur l'objectif que s'est fixé le vendeur (acquisition de nouveaux clients, fidélisation, déstockage). Nous faisons ensuite bénéficier nos testeurs de la promo optimale qui permet de compenser la meilleure réduction du prix par une augmentation des ventes.</p>
                 </div>
               </div>
             </div>
@@ -109,10 +109,10 @@
               <div class="card-faq">
                 <h3 class="card-faq-question">
                   Quels produits puis-je présenter ?
-                  <br><span>Tout beau tout chaud tout nouveau</span>
+                  <br><span>Panier polo piano</span>
                 </h3>
                 <div class="card-faq-answer">
-                    <p>L'idée est que vous puissiez faire découvrir de belles marques, de beaux produits ou services que les autres membres ne connaissent pas forcément.</p>
+                    <p>Tout produit ou service marchand pouvant être acheté par plusieurs personnes</p>
                 </div>
               </div>
             </div>
@@ -140,7 +140,7 @@
                   <br><span>J'adore quand une campagne se déroule sans accroc</span>
                 </h3>
                 <div class="card-faq-answer">
-                    <p>Lorsqu'une campagne est lancée, les membres intéressés par le produit ont 7 jours pour faire leur proposition d'achat. Chacun est libre de proposer le prix maximal qu'il est personnellement prêt à débourser pour faire l'acquisition du produit. Si vous avez confirmé votre participation à la campagne (<a href="#question-7"><b>voir ci-dessous</b></a>) et que le montant que vous avez proposé est supérieur au prix minimal que nous avons calculé, vous remportez le produit à son prix minimal. Autrement (absence de confirmation / prix proposé inférieur au prix minimal), vous ne pouvez pas bénéficier du prix proposé aux autres membres.</p>
+                    <p>Lorsqu'une campagne est lancée, les membres intéressés par le produit ont 7 jours pour faire leur proposition d'achat. Chacun est libre de proposer le prix maximal qu'il est personnellement prêt à débourser pour faire l'acquisition du produit. Si vous avez confirmé votre participation à la campagne (<a href="#question-7"><b>voir ci-dessous</b></a>) et que le montant que vous avez proposé est supérieur au prix optimal que nous avons calculé, vous remportez le produit à son prix optimal. Autrement (absence de confirmation / prix proposé inférieur au prix optimal), vous ne pouvez pas bénéficier du prix proposé aux autres membres.</p>
                 </div>
               </div>
             </div>
@@ -168,7 +168,7 @@
                   <br><span>Just do it...later.</span>
                 </h3>
                 <div class="card-faq-answer">
-                    <p>Vous n'avez rien à payer pour bloquer votre participation à la campagne. A la fin de celle-ci, si le montant que vous avez proposé est supérieur au prix minimal que nous avons calculé, vous serez débité du prix minimal (et des frais de livraison si applicables), sur la carte que vous avez renseigné au moment de confirmer votre participation.</p>
+                    <p>Vous n'avez rien à payer pour bloquer votre participation à la campagne. A la fin de celle-ci, si le montant que vous avez proposé est supérieur au prix optimal que nous avons calculé, vous serez débité du prix optimal (et des frais de livraison si applicables), sur la carte que vous avez renseignée au moment de confirmer votre participation.</p>
                 </div>
               </div>
             </div>
