change prop value for customers and business, change main metas

--- a/app/views/pages/_testimonies.html.erb
+++ b/app/views/pages/_testimonies.html.erb
@@ -9,7 +9,7 @@
           <%= cl_image_tag("jorge.jpg", :width=>150, :height=>150, :dpr=>2.0, :radius=>"max", :crop=>"fill", class: "user-photo", alt: "picture photo Jorge Pickalgo founder") %>
           <h4 class="testimony-title">Jorge, fondateur de Pickalgo</h4>
           <div class="testimony-text">
-            "Aider les vendeurs à trouver le meilleur prix pour leurs promos et faire bénéficier nos testeurs des meilleurs prix avant les autres"
+            "Aider les vendeurs à trouver le meilleur prix pour leurs promos et en faire bénéficier ceux qui y auront contribué"
           </div>
         </div>
         <div class="testimony">
@@ -23,7 +23,7 @@
           <%= cl_image_tag("jules.jpg", :width=>150, :height=>150, :gravity=>"face", :dpr=>2.0, :radius=>"max", :crop=>"fill", class: "user-photo", alt: "picture photo Mr P Pickalgo earlybird") %>
           <h4 class="testimony-title">Jules, testeur de promo sur Pickalgo</h4>
           <div class="testimony-text">
-            "Le système de proposition d'achat me pousse à être objectif dans mon avis sur la promo, et m'assure d'être gagnant. Bien vu !"
+            "Formuler une proposition d'achat me pousse à être objectif dans mon avis sur la promo, et m'assure d'être gagnant. Bien vu !"
           </div>
         </div>
       </div>
