--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,8 +20,8 @@
     </header>
     <div class="banner-container">
       <div class="banner-content">
-        <h1>Devenez testeur de promos !</h1>
-        <p class="concept">Parce qu'il est difficile pour un vendeur de trouver le meilleur prix pour sa promo, il y a Pickalgo... et vous ! Avec Pickalgo devenez testeur de promos et bénéficiez du meilleur prix avant tout le monde.
+        <h1>La meilleure promo possible</h1>
+        <p class="concept">Aidez les produits qui vous plaisent à adopter le meilleur prix promotionnel. Profitez en retour de la meilleure promo dont il est possible de vous faire bénéficier.
         </p>
         <div class="cta-links">
           <a href="#how-it-works">
@@ -56,7 +56,7 @@
         <%= image_tag "successful_purchase.svg", class: "action-image", alt: "icon image successful purchase svg" %>
         <div class="quote">Profitez...</div>
         <div class="step-text">
-          avant tout le monde du meilleur prix promotionnel qui aura été calculé
+          du meilleur prix promotionnel dont il est possible de vous faire bénéficier
         </div>
       </div>
     </div>
