--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -20,7 +20,7 @@
     <div class="banner-container">
       <div class="banner-content">
         <h1>Objectif <span id="typer">.</span></h1>
-        <p class="concept">Le prix d'une promo ne s'invente pas, il se découvre. Sur Pickalgo découvrez le prix qui permettra à votre promo d'atteindre son objectif de la façon la plus efficiente.
+        <p class="concept">Sur Pickalgo impliquez vos clients dans la conception de vos promos. Vous découvrirez ainsi le prix qui permettra à votre promo d'atteindre son objectif de la façon la plus efficiente.
         </p>
         <div class="cta-links">
           <a href="#how-it-works">
