change some elements to adjust message

--- a/app/views/leads/more_infos.html.erb
+++ b/app/views/leads/more_infos.html.erb
@@ -4,9 +4,9 @@
       <div class="logo-beta logo-form"><%= image_tag "logo.png", id: "logo", alt: "logo pickalgo color" %><br>©Beta 2018
       </div>
       <div class="form-elements">
-        <h1>S'inscrire à Pickalgo pro</h1>
+        <h1>Vous voulez plus d'infos ?</h1>
         <%= simple_form_for @lead do |f| %>
-          <p id="beta-limit">Inscrivez-vous gratuitement, nous revenons très vite vers vous !</p>
+          <p id="beta-limit">Laissez-nous vos coordonnées, nous revenons vers vous très rapidement pour vous en dire plus</p>
           <div class="form-inputs">
             <div class="input-and-icon">
               <%= f.input :brand, label: false, placeholder:'Votre marque ou raison sociale', autofocus: true %>
