--- a/app/views/pages/_testimonies.html.erb
+++ b/app/views/pages/_testimonies.html.erb
@@ -28,7 +28,7 @@
         </div>
       </div>
       <% if @page == "partners" %>
-        <%= link_to "inscription pro", inscription_pro_path, class:"btn-orange cta"%>
+        <%= link_to "Plus d'infos", more_infos_path, class:"btn-orange cta"%>
       <% elsif @page == "home" %>
         <%= link_to "S'inscrire", new_user_registration_path, class:"btn-orange cta"%>
       <% end %>
