--- a/app/views/pages/partners.html.erb
+++ b/app/views/pages/partners.html.erb
@@ -26,7 +26,7 @@
           <a href="#how-it-works">
             <div class="btn-white go-to" id="concept">Concept</div>
           </a>
-          <%= link_to "inscription pro", inscription_pro_path, class:"btn-orange cta-link"%>
+          <%= link_to "Plus d'infos", more_infos_path, class:"btn-orange cta-link"%>
         </div>
       </div>
     </div>
