--- a/app/views/pages/_right-links-pro.html.erb
+++ b/app/views/pages/_right-links-pro.html.erb
@@ -11,8 +11,8 @@
     <%= link_to contact_path do %>
       <i class="fas fa-envelope"></i> <%= t(".contact", default: "Contact") %>
     <% end %>
-    <%= link_to inscription_pro_path do %>
-      <i class="fas fa-store"></i> <%= t(".legal", default: "Mon compte pro") %>
+    <%= link_to more_infos_path do %>
+      <i class="fas fa-store"></i> <%= t(".infos", default: "Plus d'infos") %>
     <% end %>
   </div>
 
