--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
       <div class="form-elements">
         <h1>S'inscrire</h1>
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-          <p id="beta-limit">Pickalgo, c'est pour bientôt! Inscriptions ouvertes aux 500 premiers testeurs.</p>
+          <p id="beta-limit">Pickalgo, c'est pour bientôt! Inscriptions ouvertes aux 500 premiers beta testeurs.</p>
           <div class="form-inputs">
             <div class="input-and-icon">
               <%= f.input :first_name, label: false, placeholder:'Prénom', autofocus: true %>
